general register wiring

--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -3,7 +3,8 @@ incasari: sa se poata apasa sa vezi DOAR tabele cu plata zero sau cu plata nenul
 tables: glyphicon glyphicon-chevron-up for sorttable
 ??? in fisa individuala loc, la constructii, nu sa afisam si alte locuri pe aceeasi autorizatie?
 ??? platit pana in (daca respectam faptul ca nu exista gauri), este defapt ultimul an platit.. se cam repeta informatia (este acelasi lucru cu prima linie) din fisa indiv, incasari
-
+?? decedat in loc de inhumat in registru general?
+?telefon sau telefoane, chitanta sau chitante?
 
 INPUT:
 inhumare a concesionarului -> nu mai e concesionar
