--- a/webapp/locale/ro/LC_MESSAGES/django.po
+++ b/webapp/locale/ro/LC_MESSAGES/django.po
@@ -8,66 +8,392 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-07-23 20:37+0300\n"
-"PO-Revision-Date: 2017-07-23 21:15+0144\n"
+"POT-Creation-Date: 2017-07-24 01:03+0300\n"
+"PO-Revision-Date: 2017-07-24 00:57+0144\n"
 "Last-Translator: b'  <>'\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: ro\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n==1?0:(((n%100>19)||((n%100==0)&&(n!=0)))?2:1));\n"
+"Plural-Forms: nplurals=3; plural=(n==1?0:(((n%100>19)||((n%100==0)&&(n!=0)))?"
+"2:1));\n"
 "X-Translated-Using: django-rosetta 0.7.13\n"
 
-#: cemetery/forms.py:26
-msgid "Deeds"
-msgstr "Acte de concesiune"
+#: cemetery/admin.py:21 cemetery/admin.py:22
+msgid "God's Acre"
+msgstr "Hectarul lui Dumnezeu"
 
-#: cemetery/forms.py:34
+#: cemetery/admin.py:23
+msgid "Cemetery Administration"
+msgstr "Administrare cimitir"
+
+#: cemetery/admin.py:82
+msgid "Active Deed"
+msgstr "Act curent"
+
+#: cemetery/admin.py:86
+msgid "Sharing Deed"
+msgstr "Împart actul"
+
+#: cemetery/admin.py:94
+msgid "Active Owners"
+msgstr "Proprietari curenți"
+
+#: cemetery/admin.py:98 cemetery/models.py:301 gods_acre/settings.py:165
+#: gods_acre/settings.py:212
+msgid "Operations"
+msgstr "Operații"
+
+#: cemetery/admin.py:102 cemetery/admin.py:385 cemetery/forms.py:34
+#: cemetery/models.py:373 gods_acre/settings.py:169 gods_acre/settings.py:170
+#: gods_acre/settings.py:208
 msgid "Constructions"
-msgstr "Constructii"
+msgstr "Construcții"
 
-#: cemetery/forms.py:42
-msgid "Authorizations"
-msgstr "Autorizatii"
+#: cemetery/admin.py:106
+msgid "Sharing Auth."
+msgstr "Împart autorizația"
 
-#: cemetery/forms.py:92
-msgid "Owners"
-msgstr "Proprietari"
+#: cemetery/admin.py:110
+msgid "Last Paid"
+msgstr "Ultima plată"
 
-#: cemetery/forms.py:190
+#: cemetery/admin.py:114
+msgid "Unkept Since"
+msgstr "Neîntreținut din"
+
+#: cemetery/admin.py:151 cemetery/admin.py:194
+msgctxt "short"
+msgid "Deed"
+msgstr "Act"
+
+#: cemetery/admin.py:155 cemetery/admin.py:198 cemetery/admin.py:257
+#: cemetery/admin.py:321 cemetery/admin.py:350 cemetery/admin.py:462
+#: cemetery/forms.py:190 cemetery/models.py:80 gods_acre/settings.py:153
+#: gods_acre/settings.py:202
 msgid "Spots"
 msgstr "Locuri de veci"
 
-#: cemetery/models.py:250
+#: cemetery/admin.py:159 cemetery/admin.py:253 gods_acre/settings.py:159
+#: gods_acre/settings.py:178
+msgid "Receipts"
+msgstr "Chitanțe"
+
+#: cemetery/admin.py:163 cemetery/admin.py:202 cemetery/admin.py:422
+#: cemetery/admin.py:470 cemetery/admin.py:517 cemetery/forms.py:92
+#: cemetery/models.py:257 gods_acre/settings.py:160 gods_acre/settings.py:206
+msgid "Owners"
+msgstr "Proprietari"
+
+#: cemetery/admin.py:190 cemetery/admin.py:418
+msgid "Receipt"
+msgstr "Chitanță"
+
+#: cemetery/admin.py:235
+msgid "Phone"
+msgstr "Telefon"
+
+#: cemetery/admin.py:241
+msgid "Address"
+msgstr "Adresă"
+
+#: cemetery/admin.py:245
+msgid "City"
+msgstr "Localitate"
+
+#: cemetery/admin.py:249 gods_acre/settings.py:158
+msgctxt "short"
+msgid "Deeds"
+msgstr "Acte"
+
+#: cemetery/admin.py:291
+msgid "Date"
+msgstr "Dată"
+
+#: cemetery/admin.py:295 cemetery/models.py:256
+msgid "Owner"
+msgstr "Proprietar"
+
+#: cemetery/admin.py:299 cemetery/admin.py:414 cemetery/admin.py:513
+#: cemetery/models.py:79 cemetery/templates/test.html:5
+msgid "Spot"
+msgstr "Loc de veci"
+
+#: cemetery/admin.py:325 cemetery/models.py:372
+msgid "Construction"
+msgstr "Construcție"
+
+#: cemetery/admin.py:346 cemetery/forms.py:42 cemetery/models.py:397
+#: gods_acre/settings.py:171 gods_acre/settings.py:209
+msgid "Authorizations"
+msgstr "Autorizații"
+
+#: cemetery/admin.py:354
+msgid "Owner Builder"
+msgstr "Constructor proprietar"
+
+#: cemetery/admin.py:358 cemetery/models.py:332
+msgid "Company"
+msgstr "Companie"
+
+#: cemetery/admin.py:383
+msgid "#Constructions"
+msgstr "Nr construcții"
+
+#: cemetery/admin.py:454 gods_acre/settings.py:176
+msgid "Payments"
+msgstr "Contribuții"
+
+#: cemetery/admin.py:458
+msgid "Receipt Year"
+msgstr "Anul chitanței"
+
+#: cemetery/admin.py:466
+msgid "Payments Years"
+msgstr "Anii plătiți"
+
+#: cemetery/admin.py:521
+msgid "Mark selected entries as kept"
+msgstr "Marchează intrările selectate ca întreținute"
+
+#: cemetery/admin.py:532
+msgid "Mark selected entries as unkept"
+msgstr "Marchează intrările selectate ca neîntreținute"
+
+#: cemetery/apps.py:6
+msgid "cemetery"
+msgstr "cimitir"
+
+#: cemetery/forms.py:26 cemetery/models.py:211 gods_acre/settings.py:204
+msgid "Deeds"
+msgstr "Acte de concesiune"
+
+#: cemetery/models.py:38
+msgid "number"
+msgstr "număr"
+
+#: cemetery/models.py:39 cemetery/models.py:430 cemetery/models.py:457
+msgid "year"
+msgstr "an"
+
+#: cemetery/models.py:70
+msgid "parcel"
+msgstr "parcelă"
+
+#: cemetery/models.py:71
+msgid "row"
+msgstr "rând"
+
+#: cemetery/models.py:72
+msgid "column"
+msgstr "coloană"
+
+#: cemetery/models.py:196 cemetery/models.py:359 cemetery/models.py:392
+msgid "spots"
+msgstr "locuri de veci"
+
+#: cemetery/models.py:203
+msgid "owner dead"
+msgstr "proprietar decedat"
+
+#: cemetery/models.py:204
+msgid "donated"
+msgstr "donat"
+
+#: cemetery/models.py:205
+msgid "lost"
+msgstr "pierdut"
+
+#: cemetery/models.py:207
+msgid "cancel reason"
+msgstr "motiv anulare"
+
+#: cemetery/models.py:210
+msgid "Deed"
+msgstr "Act de concesiune"
+
+#: cemetery/models.py:215
+msgid "deed"
+msgstr "act de concesiune"
+
+#: cemetery/models.py:216 cemetery/models.py:432
+msgid "value"
+msgstr "valoare"
+
+#: cemetery/models.py:219
+msgid "Ownership Receipt"
+msgstr "Chitanță proprietate"
+
+#: cemetery/models.py:220 gods_acre/settings.py:205
+msgid "Ownership Receipts"
+msgstr "Chitanțe proprietate"
+
+#: cemetery/models.py:246 cemetery/templates/test.html:4
 msgid "Name"
 msgstr "Nume"
+
+#: cemetery/models.py:247
+msgid "phone"
+msgstr "telefon"
+
+#: cemetery/models.py:248
+msgid "address"
+msgstr "adresă"
+
+#: cemetery/models.py:249
+msgid "city"
+msgstr "oraș"
+
+#: cemetery/models.py:250
+msgid "deeds"
+msgstr "acte de concesiune"
+
+#: cemetery/models.py:284
+msgid "burial"
+msgstr "înhumare"
+
+#: cemetery/models.py:285
+msgid "exhumation"
+msgstr "dezhumare"
+
+#: cemetery/models.py:291 cemetery/models.py:358
+msgid "type"
+msgstr "tip"
+
+#: cemetery/models.py:292
+msgid "deceased"
+msgstr "decedat"
+
+#: cemetery/models.py:293 cemetery/models.py:431 cemetery/models.py:458
+msgid "spot"
+msgstr "loc de veci"
+
+#: cemetery/models.py:294
+msgid "date"
+msgstr "dată"
+
+#: cemetery/models.py:295
+msgid "exhumation written report"
+msgstr "proces verbal exhumare"
+
+#: cemetery/models.py:296
+msgid "remains brought from"
+msgstr "oseminte aduse din"
+
+#: cemetery/models.py:300
+msgid "Operation"
+msgstr "Operație"
+
+#: cemetery/models.py:327
+msgid "name"
+msgstr "nume"
+
+#: cemetery/models.py:333 gods_acre/settings.py:172 gods_acre/settings.py:210
+msgid "Companies"
+msgstr "Companii"
+
+#: cemetery/models.py:350
+msgid "tomb"
+msgstr "cavou"
+
+#: cemetery/models.py:351
+msgid "border"
+msgstr "bordură"
+
+#: cemetery/models.py:360
+msgid "company"
+msgstr "companie"
+
+#: cemetery/models.py:361
+msgid "owner builder"
+msgstr "constructor proprietar"
+
+#: cemetery/models.py:393
+msgid "construction"
+msgstr "construcție"
+
+#: cemetery/models.py:396
+msgid "Authorization"
+msgstr "Autorizație"
+
+#: cemetery/models.py:405
+msgid "Payment Receipt"
+msgstr "Chitanță contribuție"
+
+#: cemetery/models.py:406 gods_acre/settings.py:215
+msgid "Payment Receipts"
+msgstr "Chitanțe contribuții"
+
+#: cemetery/models.py:433
+msgid "receipt"
+msgstr "chitanță"
+
+#: cemetery/models.py:440
+msgid "Payment Unit"
+msgstr "Unitate de plată"
+
+#: cemetery/models.py:441 gods_acre/settings.py:214
+msgid "Payment Units"
+msgstr "Unități de plată"
+
+#: cemetery/models.py:459
+msgid "kept"
+msgstr "întreținut"
+
+#: cemetery/models.py:464 gods_acre/settings.py:182 gods_acre/settings.py:217
+msgid "Maintenance"
+msgstr "Întreținere"
+
+#: cemetery/models.py:465 gods_acre/settings.py:183
+msgid "Maintenances"
+msgstr "Întreținere"
 
 #: cemetery/templates/admin/cemetery/maintenance/change_list.html:9
 #, python-format
 msgid "Add bulk %(name)ss"
-msgstr ""
+msgstr "Adaugă multiple %(name)"
 
 #: cemetery/validators.py:5
 msgid "A name can contain only letters or a dash (-)"
-msgstr ""
+msgstr "Numele poate conține numai litere sau cratime (-)"
 
-#: gods_acre/settings.py:118
+#: gods_acre/settings.py:120
 msgid "English"
 msgstr "Engleză"
 
-#: gods_acre/settings.py:119
+#: gods_acre/settings.py:121
 msgid "Romanian"
 msgstr "Română"
 
-#: gods_acre/settings.py:199
+#: gods_acre/settings.py:152
+msgid "General"
+msgstr "General"
+
+#: gods_acre/settings.py:157
+msgid "Ownership"
+msgstr "Proprietate"
+
+#: gods_acre/settings.py:164
+msgid "Burials"
+msgstr "Înhumări"
+
+#: gods_acre/settings.py:177
+msgid "Units"
+msgstr "Unități"
+
+#: gods_acre/settings.py:201
 msgid "Models"
 msgstr "Modele"
 
-#: gods_acre/settings.py:218
+#: gods_acre/settings.py:220
 msgid "Data"
 msgstr "Date"
 
-#: gods_acre/settings.py:219
+#: gods_acre/settings.py:221
 msgid "Import"
 msgstr "Importare"
+
+#, fuzzy
+#~ msgid "Payment"
+#~ msgstr "Contribuții"
